<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ute.webservice.voiceagent.activities.LoginActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/MyActionBar_theme"
        app:popupTheme="@style/My_theme" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="129dp"
            android:orientation="vertical">

            </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/textInputLayout">

        <EditText
            android:id="@+id/inputAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Account ID"
            tools:layout_height="match_parent"
            tools:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/textInputLayout"
        android:layout_alignEnd="@+id/textInputLayout"
        android:id="@+id/textInputLayout2"
        android:layout_alignLeft="@+id/textInputLayout"
        android:layout_alignStart="@+id/textInputLayout">

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password"
            android:inputType="textPassword"
            tools:layout_height="wrap_content"
            tools:layout_width="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonSampleClick"
        android:text="login"
        android:layout_below="@+id/textInputLayout2"
        android:layout_alignRight="@+id/textInputLayout2"
        android:layout_alignEnd="@+id/textInputLayout2"
        android:layout_marginTop="18dp" />

    </RelativeLayout>

</RelativeLayout>
