<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_title">Ute Voice Agent</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_aibutton_sample">Voice Agent</string>
    <string name="title_welcome_activity">Voice Agent</string>

    <string name="use_bluetooth_headset">Use Bluetooth headset</string>

    <string name="cancel">Cancel</string>
    <string name="bed_finder_label">Open Bed Finder</string>
    <string name="surgery_cost_label">Procedure Cost Estimator</string>
    <string name="equipment_locator_label">Equipment Finder</string>
    <string name="on_call_label">On-call Finder</string>

    <string name="image_alt_text">Image</string>

    <string name="welcome_message">What do you want to know?</string>

    <string name="open_beds_message">For which unit do you want the open bed availability?</string>
    <string name="title_activity_surgery">Voice Agent</string>
    <string name="surgery_message">For which procedure do you want the estimated patient price?</string>
    <string name="title_activity_surgery_codes">Voice Agent</string>
    <string name="title_activity_oncall">Voice Agent</string>
    <string name="title_activity_equipmentfind">Voice Agent</string>
    <string name="on_call_message">On Call string Here</string>
    <string name="on_call_list_message">For which area are you looking?</string>
    <string name="search_onCall_label">Search for a specific area</string>
    <string name="search_onCall_button_label">Search</string>
    <string name="dialog_flow_error">An error occurred. Try again.</string>
    <string name="device_label">No Device Selected</string>
    <string name="location_label">UHOSP - Level 4</string>
    <string name="oncall_guide">
        To see information about on-call personnel, say \"On call\" and then the desired position. \n\n
        Example: \"On call dermatology\" \n
    </string>
    <string name="oncall_Departments">
        \n
        Example positions: \n
        - Plastic Surgery \n
        - Genetics \n
        - Body Donation \n
        - VAMC Cardiothoracic \n
        - Oncology Fellow \n
        - Lung Transplant Coordinator
    </string>
    <string name="procedures_instructions">
        To see the cost of a procedure, say \"cost of\" and then the desired procedure. \n\n
        Example: \"Cost of an abdomen MRI\" \n
    </string>
    <string name="procedures_types">
        \n
        Example procedures: \n
        - C Spine MRI \n
        - Neck CT \n
        - Eye evaluation
    </string>
    <string name="open_bed_instructions">
        To get the open bed availability of a unit, say \"open beds\" and then the desired unit. \n\n
        Example: \"open beds five west\" \n\n
        To get the open bed availability of all units, say \"open beds all units\"
    </string>
    <string name="open_bed_types">
        Buildings:\n\n
        5 West\n
    </string>
    <string name="equipment_instructions">
        To find equipment on your floor, say \"Locate\" and then the desired category of equipment. \n\n
        Example: \"Locate infusion pumps\" \n
    </string>
    <string name="equipment_types">
        \n
        Example categories: \n
        - Infusion pumps \n
        - Ventilators \n
        - Defibrillators \n
        - Vitals Monitors \n
        - Cardiac Output Monitors
    </string>

</resources>
